# FeelOS

./: .gitignore  README.md  index.html  justfile  main.js  package.json
backend/: pyproject.toml
backend/src/backend/: main.py
ideas/: spec.md
scripts/: smoke_test.py
