[project]
name = "backend"
version = "0.1.0"
description = "Minimal browser OS backend"
readme = "README.md"
authors = [
    { name = "zzstoatzz", email = "thrast36@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "marvin>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
